--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build && next export",
-    "start": "next start"
+    "start": "next start -p 3002"
   },
   "dependencies": {
     "next": "10.2.3",
